2004-12-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: moved pppscripts creation to a generic function,
	made debian use pppscript instead of wvial. s/wvsection/section/g

2004-11-26  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in (gst_network_enable_iface_with_config): little fix 
	with multiword essids

2004-11-23  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: add the PPP interface EVEN if it's not configured

2004-11-23  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in (gst_network_interfaces_get): began to handle PPP
	devices

2004-11-22  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in: added a small hack for being sure that the
	interface is really down when possibly messing ifup/ifdown/ifconfig
	calls

2004-11-20  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in (gst_network_enable_iface_with_config): add "up" 
	at the end of the ifconfig call

2004-11-18  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, network.pl.in: finished the
	"enable_iface_with_config" directive, it should work with eth, wifi,
	irlan and plip interfaces in linux and freebsd. Got rid of the hideous
	"get_interface_name" hack

2004-11-18  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, network.pl.in: began working on the new
	"enable_iface_with_config" directive

2004-11-16  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, network.pl.in: fix some functions that got
	broken with the new xml format, only save the interfaces if they
	have changed

2004-11-15  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in, network-conf.in: added "detect_essids" directive

2004-11-11  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in (gst_network_interfaces_set): really delete the
	interfaces that aren't configured.
	* replace.pl.in: somewhat improve interfaces deleting in debian

2004-11-11  Carlos Garnacho Parro  <carlosg@gnome.org>
